--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -4,11 +4,7 @@ $secondary-font:'Playfair Display',serif;
 
 
 // site colours
-$nudeclr:#CFBDA9;
-$pinkclr:#F5E3D4;
-$brownclr:#99614D;
-$greenclr:#778A67;
-$darkgreen:#1b312f;
-
-$beigeclr:#F3ECE6;
-
+$darkgreen:#363629;
+$deepgreen:#52554B;
+$lightgreen:#808579; 
+$green:#778A67;
