--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,6 +1,8 @@
-@use "./partials/setup";
-@use "./partials/variables";
-@use "./partials/baseStyles";
-@use "./partials/typography";
-@use "./partials/header";
-@use "./partials/main";
+@forward './partials/variables';
+@forward './partials/setup';
+@forward './partials/baseStyles';
+@forward './partials/typography';
+@forward './partials/header';
+@forward './partials/footer';
+@forward './partials/main';
+@forward './partials/mediaQueries';
