styled about section and added icons for skills section

--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -3,7 +3,7 @@
 body{
   font-family:$primary-font ;
   font-weight:400;
-  background-color:#ffffff ;
+  background-color:white;
   height: 100vh;
 }
 
