--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -24,6 +24,10 @@
 //   padding: 5px 0;
 // }
 
+.nav-logo{
+  font-size: 1.5rem;
+}
+
 .nav-list{
   font-size: 1rem;
   display: flex;
@@ -31,7 +35,7 @@
   align-items:center;
   position: fixed;
   top: 0px;
-  left:-20em;
+  left:-100%;
   background-color:#efe7ed;
   width:100%;
   transition: 0.5s ease-in-out;
