--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -1,25 +1,59 @@
 @use 'variables' as *;
 
 .about-me{
-  background-color:#dfceda;  
+  background-color:#E9F1F7;  
   padding: 10px 0;
 }
 
 .about-content{
-  text-align: center;
-}
-
-.skills-section{
-  background-color: #241921;  
-  color: white;
-  padding: 20px 0;
   h2{
-    margin: 0;
     text-align: center;
   }
 }
 
+.skills-section{
+  background-color: #316287;  
+  color: white;
+  padding: 20px 0;
+  .skills{
+
+  }
+  h2{
+    margin: 0;
+    text-align: center;
+  }
+
+  ul{
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    li{
+      display: flex;
+      flex-direction: column;
+      max-width: 50%;
+      font-size: 0.8rem;
+      list-style: none;
+      margin: 15px 0;
+      padding: 15px 0;
+      box-shadow: 0px 4px 8px white;
+      border: 2px solid white;
+      i{
+        font-size: 2rem;
+      }
+    }
+  }
+}
+
+.projects{
+  h2{
+    margin: 0;
+  }
+}
+
 .contact-me{
-  background-color: #fceef7;
+  h2{
+    margin: 0;
+  }
+  background-color: #f2f5f8;
   padding: 1em 0 2em;
 }
