--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -36,7 +36,7 @@
   position: fixed;
   top: 0px;
   left:-100%;
-  background-color:#efe7ed;
+  background-color:white;
   width:100%;
   transition: 0.5s ease-in-out;
 }
@@ -49,7 +49,7 @@
 .bar{
   background-color: black;
   display:block;
-  width: 1.5em;
+  width: 1em;
   height: 3px;
   margin: 5px auto;
   transition: all 0.3s ease;
@@ -58,7 +58,7 @@
 .hamburger.active{
   display: block;
   .bar:nth-child(2){
-    transform: translateX(6px) rotate(180deg);
+    transform: translateX(4px) rotate(180deg);
   }
   .bar:nth-child(1){
     transform: translateY(-1px) rotate(-35deg);
@@ -73,6 +73,11 @@
 }
 
 .header-content{
-  text-align: center;
   margin-bottom: 50px;
+  h1{
+    text-align: center;
+  }
+  p{
+   font-size: 0.8rem;
+  }
 }
