--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -1,59 +1,128 @@
 @use 'variables' as *;
 
-.about-me{
-  background-color:#E9F1F7;  
-  padding: 10px 0;
+body{
+  background-color: #F1EEE4;
 }
 
-.about-content{
-  h2{
-    text-align: center;
+.about-me{
+  padding: 10px 0;
+  .about-content{
+    h2{
+      text-align: center;
+    }
   }
 }
 
 .skills-section{
-  background-color: #316287;  
+  background-color: #C8BB93;  
   color: white;
-  padding: 20px 0;
-  .skills{
 
+  form{
+    align-content: center;
   }
+
   h2{
     margin: 0;
     text-align: center;
+    padding-top: 30px;
   }
-
   ul{
-    margin: 0;
-    padding: 0;
-    text-align: center;
+    max-width: 60%;
+    display: flex;
+    flex-direction: column;
     li{
-      display: flex;
-      flex-direction: column;
-      max-width: 50%;
-      font-size: 0.8rem;
       list-style: none;
-      margin: 15px 0;
-      padding: 15px 0;
-      box-shadow: 0px 4px 8px white;
       border: 2px solid white;
-      i{
-        font-size: 2rem;
+      border-radius: 10px;
+      text-align: center;
+      margin-bottom: 15px;
+      padding: 10px;
+      .skills-icons{
+        font-size: 2.5rem;
+        text-align: center;
       }
     }
   }
 }
 
 .projects{
+  padding: 30px 0;
   h2{
-    margin: 0;
+    margin: 0px;
+    text-align: center;
   }
 }
 
-.contact-me{
+// STYLE FORM HERE 
+
+.contact{
+  border-top: 2px solid #282415;
+
   h2{
     margin: 0;
+    text-align: center;
+    padding:20px;
   }
-  background-color: #f2f5f8;
-  padding: 1em 0 2em;
+
+  .contact-links{
+    margin: 20px 0;
+    a{
+      margin-right: 10px;
+    }
+  }
+
+  .contact-form{
+    display: flex;
+    
+    .site-form{
+      display: flex;
+      flex-direction: column;
+    }
+  }
+
+  input{
+    width: 80%;
+    padding: 10px 10px;
+    border-radius: 5px;
+    border-color: black;
+    margin-bottom: 20px;
+  }
+
+  textarea{
+    width: 80%;
+    padding: 10px 10px;
+    border-radius: 5px;
+    border-color: black;
+    margin-bottom: 20px;
+    resize: none;
+  }
+
+  input:focus-within{
+    border-color:#f3ee53;
+    border-width: 3px;
+    outline: none;
+  }
+
+  textarea:focus-within{
+    border-color:#f3ee53;
+    border-width: 3px;
+    outline: none;
+  }
+  .form-btn{
+    background-color:#877745;
+    // border-color: 5px solid white;
+    color: white;
+    border-radius: 5px;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    padding: 5px 10px;
+    margin-bottom: 20px;
+    align-self: center;
+   
+  }
+  .form-btn:hover{
+    cursor: pointer;
+    opacity: 60%;
+  }
 }
