--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -3,8 +3,8 @@
 body{
   font-family:$primary-font ;
   font-weight:400;
-  background-color:white;
   height: 100vh;
+  font-size: clamp(0.9rem, 0.83rem + 0.27vw, 1rem);
 }
 
 h1{
