--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -1,5 +1,14 @@
 @use 'variables' as*;
 
+.hero-img{
+  background-image:url(/asset/pexels-karina-zhukovskaya-6446685.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  height: 70%;
+}
+
 .nav-div{
   width: 90%;
   a{
@@ -25,6 +34,7 @@
 // }
 
 .nav-logo{
+  font-family: $secondary-font;
   font-size: 1.5rem;
 }
 
@@ -32,18 +42,18 @@
   font-size: 1rem;
   display: flex;
   flex-direction: column;
-  align-items:center;
+  // align-items:center;
   position: fixed;
   top: 0px;
   left:-100%;
-  background-color:white;
+  background-color:#EAE6D7;
   width:100%;
   transition: 0.5s ease-in-out;
 }
 
 .nav-link:hover{
   transition: 0.3s ease-in-out;
-  color:#eb99eb;
+  color:#877745;
 }
 
 .bar{
@@ -58,13 +68,13 @@
 .hamburger.active{
   display: block;
   .bar:nth-child(2){
-    transform: translateX(4px) rotate(180deg);
+    transform: translateX(6px) rotate(180deg);
   }
   .bar:nth-child(1){
-    transform: translateY(-1px) rotate(-35deg);
+    transform: translateY(3px) rotate(-40deg);
   }
     .bar:nth-child(3){
-    transform: translateY(1px) rotate(35deg);
+    transform: translateY(-3px) rotate(40deg);
   }
 }
   
@@ -73,11 +83,14 @@
 }
 
 .header-content{
-  margin-bottom: 50px;
+  margin-top: 4rem;
   h1{
-    text-align: center;
+    // text-align: center;
+    margin-bottom: 0;
+    padding-bottom: 0;
   }
   p{
    font-size: 0.8rem;
+  //  text-align: center;
   }
 }
