--- a/styles/partials/_mediaQueries.scss
+++ b/styles/partials/_mediaQueries.scss
@@ -1,16 +1,15 @@
 @use 'variables' as*;
 
-@media (min-width:700px) {
+@media (min-width:600px) and (max-width:1260px) {
+  
+  .nav-bar{
+    
   .hamburger{
     display: none;
-    cursor: pointer;
+  
   }
 
-  .nav-bar{
-  min-height: 100px;
-  display: flex;
-  justify-content:space-between;
-  align-items: center;
 }
+
 
 }
