--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -1,6 +1,7 @@
 @use 'variables' as *;
 
 body{
+  background-color: #F1EEE4;
   font-family:$primary-font ;
   font-weight:400;
   height: 100vh;
@@ -9,7 +10,7 @@ body{
 
 h1{
   font-family: $secondary-font;
-  font-weight: 500;
+  font-weight: 600;
   font-size: clamp(1.5rem, -0.7143rem + 8.5714vw, 2.5rem);
 }
 
