--- a/styles/styles.css
+++ b/styles/styles.css
@@ -236,7 +236,14 @@ img {
   margin: 0 auto;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
 body {
+  background-color: #F1EEE4;
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 400;
   height: 100vh;
@@ -245,7 +252,7 @@ body {
 
 h1 {
   font-family: "Playfair Display", serif;
-  font-weight: 500;
+  font-weight: 600;
   font-size: clamp(1.5rem, -0.7143rem + 8.5714vw, 2.5rem);
 }
 
@@ -259,6 +266,15 @@ h3 {
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 600;
   font-size: 1.25rem;
+}
+
+.hero-img {
+  background-image: url(/asset/pexels-karina-zhukovskaya-6446685.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  height: 70%;
 }
 
 .nav-div {
@@ -281,6 +297,7 @@ h3 {
 }
 
 .nav-logo {
+  font-family: "Playfair Display", serif;
   font-size: 1.5rem;
 }
 
@@ -288,18 +305,17 @@ h3 {
   font-size: 1rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
   position: fixed;
   top: 0px;
   left: -100%;
-  background-color: white;
+  background-color: #EAE6D7;
   width: 100%;
   transition: 0.5s ease-in-out;
 }
 
 .nav-link:hover {
   transition: 0.3s ease-in-out;
-  color: #eb99eb;
+  color: #877745;
 }
 
 .bar {
@@ -315,13 +331,13 @@ h3 {
   display: block;
 }
 .hamburger.active .bar:nth-child(2) {
-  transform: translateX(4px) rotate(180deg);
+  transform: translateX(6px) rotate(180deg);
 }
 .hamburger.active .bar:nth-child(1) {
-  transform: translateY(-1px) rotate(-35deg);
+  transform: translateY(3px) rotate(-40deg);
 }
 .hamburger.active .bar:nth-child(3) {
-  transform: translateY(1px) rotate(35deg);
+  transform: translateY(-3px) rotate(40deg);
 }
 
 .nav-list.active {
@@ -329,10 +345,11 @@ h3 {
 }
 
 .header-content {
-  margin-bottom: 50px;
+  margin-top: 4rem;
 }
 .header-content h1 {
-  text-align: center;
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
 .header-content p {
   font-size: 0.8rem;
@@ -350,10 +367,6 @@ footer p {
   text-align: center;
 }
 
-body {
-  background-color: #F1EEE4;
-}
-
 .about-me {
   padding: 10px 0;
 }
@@ -364,43 +377,62 @@ body {
 .skills-section {
   background-color: #C8BB93;
   color: white;
-}
-.skills-section form {
-  align-content: center;
+  display: block;
 }
 .skills-section h2 {
   margin: 0;
   text-align: center;
-  padding-top: 30px;
+  padding: 30px 0;
 }
-.skills-section ul {
-  max-width: 60%;
+.skills-section .skills-content ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+  padding-bottom: 30px;
+}
+.skills-section .skills-content ul li {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
-.skills-section ul li {
-  list-style: none;
-  border: 2px solid white;
-  border-radius: 10px;
-  text-align: center;
-  margin-bottom: 15px;
-  padding: 10px;
-}
-.skills-section ul li .skills-icons {
-  font-size: 2.5rem;
-  text-align: center;
+.skills-section .skills-content ul li .skills-icons {
+  font-size: 1.5rem;
 }
 
 .projects {
-  padding: 30px 0;
+  padding-bottom: 20px;
 }
 .projects h2 {
-  margin: 0px;
   text-align: center;
+}
+.projects .project-info {
+  text-align: center;
+}
+.projects .project-info .technical-skills {
+  text-align: center;
+}
+.projects .project-info .technical-skills p {
+  color: #877745;
+  font-weight: 600;
+}
+.projects .project-info .technical-skills ul {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  margin-bottom: 20px;
+}
+.projects .project-info .project-links {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+}
+.projects .project2 {
+  margin-top: 50px;
 }
 
 .contact {
-  border-top: 2px solid #282415;
+  border-top: 2px solid white;
 }
 .contact h2 {
   margin: 0;
@@ -424,52 +456,48 @@ body {
   width: 80%;
   padding: 10px 10px;
   border-radius: 5px;
-  border-color: black;
   margin-bottom: 20px;
+  text-transform: uppercase;
+  font-size: 0.7rem;
 }
 .contact textarea {
   width: 80%;
   padding: 10px 10px;
   border-radius: 5px;
-  border-color: black;
   margin-bottom: 20px;
+  text-transform: uppercase;
+  font-size: 0.7rem;
   resize: none;
 }
 .contact input:focus-within {
-  border-color: #f3ee53;
+  border-color: #AB9A5F;
   border-width: 3px;
   outline: none;
 }
 .contact textarea:focus-within {
-  border-color: #f3ee53;
+  border-color: #AB9A5F;
   border-width: 3px;
   outline: none;
 }
 .contact .form-btn {
   background-color: #877745;
+  font-size: 1rem;
   color: white;
   border-radius: 5px;
   text-align: center;
   text-transform: uppercase;
-  font-size: 0.8rem;
-  padding: 5px 10px;
+  font-size: 0.7rem;
+  padding: 0.5em 1em;
   margin-bottom: 20px;
-  align-self: center;
+  display: flex;
 }
 .contact .form-btn:hover {
   cursor: pointer;
   opacity: 60%;
 }
 
-@media (min-width: 700px) {
-  .hamburger {
+@media (min-width: 600px) and (max-width: 1260px) {
+  .nav-bar .hamburger {
     display: none;
-    cursor: pointer;
-  }
-  .nav-bar {
-    min-height: 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
   }
 }
