adjusted the colors on the website for accessibility

--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -1,11 +1,12 @@
 @use 'variables' as *;
 
 footer{
-  background-color:#C8BB93;
-  color: white;
+  background-color:#282415;  
+  color:#F5F5F5;
+  
   p{
     margin: 0;
-    padding: 5px 0;
+    padding: 10px 0;
     font-weight: 600;
     font-size: 0.8rem;
     text-align: center;
