--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -1,8 +1,12 @@
 @use 'variables' as *;
 
+// *{
+//   border: 2px red solid;
+// }
+
 //ABOUT SECTION 
 
-.about-me{
+.about{
   padding: 10px 0;
   .about-content{
     h2{
@@ -14,26 +18,24 @@
 //SKILLS SECTION
 
 .skills-section{
-  background-color: #C8BB93;  
-  color: white;
-  display: block;
+  background-color:#282415;  
+  color:#F5F5F5;
   h2{
     margin: 0;
     text-align: center;
     padding: 30px 0;
   }
   .skills-content{
-    ul{
+    ul {
       display: flex;
       flex-wrap: wrap;
-      justify-content: center;
-      gap: 30px;
-      padding-bottom: 30px;
-      li{
+      text-align: center;
+      li {
         display: flex;
         flex-direction: column;
         align-items: center;
-        .skills-icons{
+        width: 50%;
+        i {
           font-size: 1.5rem;
         }
       }
@@ -46,6 +48,9 @@
 
 .projects{
   padding-bottom: 20px;
+  a {
+    color: black;
+  }
   h2{
     text-align: center;
   }
@@ -69,7 +74,6 @@
       display: flex;
       gap: 20px;
       justify-content: center;
-
     }
   }
   .project2{
@@ -81,7 +85,6 @@
 
 .contact{
   border-top: 2px solid white;
-
   h2{
     margin: 0;
     text-align: center;
@@ -91,16 +94,18 @@
   .contact-links{
     margin: 20px 0;
     a{
+      color:#877745;
       margin-right: 10px;
     }
   }
 
   .contact-form{
-    display: flex;
-    
-    .site-form{
-      display: flex;
-      flex-direction: column;
+    // display: flex;
+
+
+    #site-form{
+      // display: flex;
+      // flex-direction: column;
     }
   }
 
@@ -136,15 +141,14 @@
   }
   .form-btn{
     background-color:#877745;
-    font-size: 1rem;
     color: white;
     border-radius: 5px;
     text-align: center;
     text-transform: uppercase;
-    font-size: 0.7rem;
-    padding: 0.5em 1em;
     margin-bottom: 20px;
-    display: flex;
+    padding: 10px 20px;
+    width: 210px;
+    // display: flex;
   }
   .form-btn:hover{
     cursor: pointer;
