--- a/styles/partials/_baseStyles.scss
+++ b/styles/partials/_baseStyles.scss
@@ -1,9 +1,12 @@
 @use 'variables' as *;
 
-html {
-    font-size: 125%;
+*{
     margin: 0;
     padding: 0;
+}
+
+html {
+    font-size: 125%;
 }
 
 img {
