--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -5,32 +5,27 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  position: relative;
   height: 70%;
 }
 
-.container{
-  max-width:1260px;
-  margin: 0 auto;
-  padding: 20px 40px;
-}
-
-a {
-  color:white;
-  text-decoration: none;
+.navbar{
+  width:100%;
+  .container{
+    max-width:1260px;
+    margin: 0 auto;
+    padding: 20px 40px;
+  }
 }
 
 .nav-link{
   list-style: none;
   margin: 20px 0;
-  // border-bottom: 1px solid black;
-  // width: 3rem;
-}
-
-.navbar{
-  // background:#F1EEE4;
-  position:sticky;
-  width: 100%;
+  a {
+    color: black;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: clamp(0.9rem, 0.83rem + 0.27vw, 1rem);
+  }
 }
 
 .flex-nav {
@@ -42,6 +37,11 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  a{
+    color: black;
+    font-size: 1.5rem;
+    font-weight: 600;
+  }
 }
 
 .nav-toggle{
@@ -59,12 +59,11 @@ a {
 }
 
 .nav-open{
-  /* height: 100vh; */
-  height: 10%;
+  height: 25vh;
 }
 
 .header-content{
-  margin-top: 4rem;
+  margin-top: 4em;
   h1{
     margin-bottom: 0;
     padding-bottom: 0;
